[gd_scene load_steps=3 format=3 uid="uid://ca0723gt87eb7"]

[ext_resource type="Script" path="res://ui/performance/metrics/performance_metrics.gd" id="1_cjjbn"]
[ext_resource type="LabelSettings" uid="uid://d1524b81u6exi" path="res://ui/performance/metrics/hardware_label_settings.tres" id="2_sjbvd"]

[node name="PerformanceMetrics" type="Control"]
process_mode = 3
process_priority = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_cjjbn")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(0.00392157, 0.00392157, 0.00392157, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -342.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="EngineVboxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 5

[node name="FPSLabel" type="Label" parent="Panel/MarginContainer/EngineVboxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "FPS:"
label_settings = ExtResource("2_sjbvd")

[node name="VsyncLabel" type="Label" parent="Panel/MarginContainer/EngineVboxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "VSYNC:"
label_settings = ExtResource("2_sjbvd")

[node name="MemoryLabel" type="Label" parent="Panel/MarginContainer/EngineVboxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "MEMORY:"
label_settings = ExtResource("2_sjbvd")

[node name="OSLabel" type="Label" parent="Panel/MarginContainer/EngineVboxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "OS:"
label_settings = ExtResource("2_sjbvd")

[node name="DistroLabel" type="Label" parent="Panel/MarginContainer/EngineVboxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Distro:"
label_settings = ExtResource("2_sjbvd")

[node name="CPULabel" type="Label" parent="Panel/MarginContainer/EngineVboxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "CPU:"
label_settings = ExtResource("2_sjbvd")

[node name="GPULabel" type="Label" parent="Panel/MarginContainer/EngineVboxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "GPU:"
label_settings = ExtResource("2_sjbvd")
